# python-polars-book

./: .gitignore  README.md  _quarto.yml  index.qmd  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
chapters/: 01-toolchain.qmd  02-positron-jupyter.qmd  03-foundations.qmd  04-functions-errors-files.qmd  05-classes-modern-idioms.qmd  06-library-authoring.qmd  07-polars-core.qmd  08-polars-advanced.qmd
docs/: api.md  index.md
scripts/: 00_fetch_pilot_data.py  01_fetch_dg_data.py
src/clintools/: __init__.py  __main__.py  demographics.py  exceptions.py
tests/: conftest.py  test_demographics.py
