[project]
name = "clintools"
version = "0.1.0"
description = "Clinical data utilities for Python programmers in pharma"
authors = [{ name = "Vignesh Thanikachalam", email = "about.vignesh@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"  # 3.13 installed locally; 3.11+ compatible
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pyreadstat>=1.2.0",
]

[project.optional-dependencies]
book = [
    "jupyterlab>=4.0.0",
    "plotnine>=0.13.0",
    "matplotlib>=3.8.0",
    "lifelines>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
clintools = "clintools.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clintools"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
